<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FastCamera</string>
    <string name="take_photo">Фото</string>
    <string name="record_video">Відео</string>
    <string name="switch_camera">Камера</string>
    <string name="flash">Спалах</string>
    <string name="timer">Таймер</string>
    <string name="grid">Сітка</string>
    <string name="permission_required">Потрібен доступ до камери</string>
    <string name="permission_denied">Без дозволу камера не працює</string>
</resources>
